# ActionAI

./: .env.template  .gitignore  ActionAI.py  README.md  pyproject.toml  requirements.txt
assets/: logo.icns
prompt/: system.md
utils/: utils.py
